# slamcore

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
config/: params.yaml  rviz_config.rviz
include/slamcore/: slam.hpp
launch/: gazebo_slam.launch.py  rviz.launch.py
models/: slam_robot.urdf  slam_robot.urdf.xacro
scripts/: benchmark_kitti.py  build.sh  evaluate_trajectory.py  run_demo.sh
src/: backend_optimizer.cpp  frame.cpp  frontend_lidar.cpp  frontend_visual.cpp  imu_integration.cpp  loop_closure.cpp  map_builder.cpp
src/nodes/: backend_optimizer_node.cpp  imu_integration_node.cpp  lidar_odometry_node.cpp  loop_closure_node.cpp  map_builder_node.cpp  visual_odometry_node.cpp
tests/: test_frame.cpp
worlds/: slam_world.sdf
