<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>slamcore</name>
  <version>0.1.0</version>
  <description>Lightweight multi-sensor SLAM system for ROS2 with LiDAR, camera, and IMU fusion</description>
  <maintainer email="dev@slamcore.local">Slamcore Team</maintainer>
  <license>MIT</license>

  <author email="dev@slamcore.local">Slamcore Team</author>

  <url type="repository">https://github.com/slamcore/slamcore</url>
  <url type="bugtracker">https://github.com/slamcore/slamcore/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>pcl_ros</depend>
  <depend>PCL</depend>
  <depend>OpenCV</depend>
  <depend>g2o</depend>
  <depend>yaml-cpp</depend>
  <depend>Eigen3</depend>

  <exec_depend>rviz2</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
